// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Partials tests renders correctly HeroPartial 1`] = `
<View
  style={
    Array [
      Array [
        Object {
          "flexDirection": "column",
          "paddingHorizontal": 0,
          "paddingTop": 0,
        },
      ],
    ]
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "height": 100,
            "width": 100,
          },
        ],
        Array [
          Object {
            "height": 444.6666666666667,
            "width": "100%",
          },
        ],
      ]
    }
  >
    <Image
      contentFit="cover"
      onError={[Function]}
      onLoadEnd={[Function]}
      onProgress={[Function]}
      source={
        Object {
          "uri": "https://cdn.minds.com/fs/v1/thumbnail/1273869385403994122/xlarge/",
        }
      }
      style={
        Array [
          Array [
            Object {
              "height": 100,
              "width": 100,
            },
          ],
          Array [
            Object {
              "height": 444.6666666666667,
              "width": "100%",
            },
          ],
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "borderBottomWidth": 1,
          "display": "flex",
          "flexDirection": "row",
        },
        Object {
          "padding": 16,
        },
        Object {
          "borderColor": "#53565A",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
            "paddingRight": 10,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#F2F2F2",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Array [
              Object {
                "fontSize": 16,
                "fontWeight": "bold",
              },
            ],
          ]
        }
      >
        Wow, what do we call this? It's beautiful, isn't it?
#Nature
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#F2F2F2",
            },
            Object {
              "fontFamily": "Roboto",
            },
            Array [
              Object {
                "paddingTop": 8,
              },
              Object {
                "color": "#b9bbc0",
              },
            ],
          ]
        }
      >
        5
         channels discussing -
         
        1h
      </Text>
    </View>
  </View>
</View>
`;

exports[`Partials tests renders correctly RichPartial 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "padding": 16,
      },
      Object {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "paddingRight": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#F2F2F2",
          },
          Object {
            "fontFamily": "Roboto",
          },
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
            },
          ],
        ]
      }
    >
      Wow, what do we call this? It's beautiful, isn't it?
#Nature
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#F2F2F2",
          },
          Object {
            "fontFamily": "Roboto",
          },
          Array [
            Object {
              "paddingTop": 8,
            },
            Object {
              "color": "#b9bbc0",
            },
          ],
        ]
      }
    >
      5
       channels discussing -
       
      1h
    </Text>
  </View>
  <View
    style={
      Array [
        Array [
          Object {
            "height": 100,
            "width": 100,
          },
        ],
        null,
      ]
    }
  >
    <Image
      contentFit="cover"
      onError={[Function]}
      onLoadEnd={[Function]}
      onProgress={[Function]}
      source={
        Object {
          "uri": "https://cdn.minds.com/fs/v1/thumbnail/1273869385403994122/xlarge/",
        }
      }
      style={
        Array [
          Array [
            Object {
              "height": 100,
              "width": 100,
            },
          ],
          null,
        ]
      }
    />
  </View>
</View>
`;

exports[`Partials tests renders correctly TrendingHashtagPartial 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderBottomWidth": 1,
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "padding": 16,
      },
      Object {
        "borderColor": "#53565A",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "paddingRight": 10,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#F2F2F2",
          },
          Object {
            "fontFamily": "Roboto",
          },
          Array [
            Object {
              "paddingBottom": 8,
            },
            Object {
              "color": "#b9bbc0",
            },
          ],
        ]
      }
    >
      Trending 
      9.224444444444444
      h - 
      5
       posts
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#F2F2F2",
          },
          Object {
            "fontFamily": "Roboto",
          },
          Array [
            Object {
              "fontSize": 16,
              "fontWeight": "bold",
            },
          ],
        ]
      }
    >
      #
      nature
    </Text>
  </View>
  <View
    style={
      Object {
        "overflow": "hidden",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "transparent",
            "justifyContent": "center",
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            Array [
              Object {
                "color": "#a1a5ab",
                "fontSize": 32,
              },
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "fontFamily": "Material Design Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
          testID="iconIcon"
        >
          󰅂
        </Text>
      </View>
    </View>
  </View>
</View>
`;
